refactor(video-task): remove video task module
